# partial-rankings

./: .gitignore  Makefile  README.md  environment.yml  example.ipynb  pyproject.toml
data/raw/match_lists/: wolf.txt
partial_rankings/: __init__.py  dataset.py  decos.py  model.py  preprocessing.py  utils.py
